# my-trade-v1

./: .env  .env.example  .gitignore  AGENTS.md  HOW_TO_USE.md  pyproject.toml
app/backtest/: metrics.py  report.py  runner.py
app/config/: settings.py  strategy.yaml  strategy_15m.yaml  strategy_15m_scoring.yaml
app/core/: logger.py  types.py
app/data/: db.py  repositories.py
app/exchange/: hyperliquid_data.py
app/indicators/: ema.py
app/runtime/: paper.py
app/strategy/: breakout.py  candidates.py  evaluator.py  pivots.py  risk.py  scoring.py  trend.py  triangle.py  zones.py
data/: bot.sqlite3  sample_candles.csv
my_trade_v1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
reports/backtests/20260709173330/: equity_curve.csv  signals.csv  summary.json  trades.csv
reports/backtests/20260709184929/: signals.csv
reports/backtests/20260709185015/: equity_curve.csv  open_trades.csv  summary.json
reports/backtests/20260709185203/: summary.json  trades.csv
reports/backtests/20260709185249/: open_trades.csv  signals.csv  summary.json  trades.csv
reports/backtests/20260709200455/: equity_curve.csv  open_trades.csv  signals.csv  summary.json  trades.csv
reports/backtests/20260709200723/: equity_curve.csv  open_trades.csv  summary.json  trades.csv
reports/backtests/20260709201710/: summary.json  trades.csv
scripts/: fetch_candles.py  import_candles_csv.py  init_db.py  run_backtest.py  run_paper.py
tests/: test_backtest.py  test_candidates_scoring.py  test_exchange_paper.py  test_foundation.py  test_strategy.py
(+8 files in other folders)
